changement texte dans placeholder

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <form id="taskForm">
                     <div class="mb-3">
                         <label for="taskTitle" class="form-label">Titre de la tâche</label>
-                        <input type="text" id="taskTitle" placeholder="Task Title" name="taskTitle" class="form-control" required>
+                        <input type="text" id="taskTitle" placeholder="Saisir ici le titre de la tâche à faire" name="taskTitle" class="form-control" required>
                     </div>
                     <div class="mb-3">
                         <label for="taskContent" class="form-label">Descriptif de la tâche</label>
-                        <textarea id="taskContent" placeholder="Task Content" name="taskContent" class="form-control" required></textarea>
+                        <textarea id="taskContent" placeholder="Veuillez décrire ici la tâche à faire" name="taskContent" class="form-control" required></textarea>
                     </div>
                     
 
